test/scc/pp/errors/002.a
002.t:1:10: error: empty file name in #include